latest code changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ server.error.include-exception=false
 logging.file=C:/log/spring_app_log_file.log
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+logging.level.=DEBUG
